# rust-scrnadiff

./: Cargo.toml  README.md
src/: main.rs
